CS_PROD_20150209_01/Metadata/unpackaged/objects/Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <formula>Account__r.Owner.FirstName + &apos; &apos; +  Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Campaign__c</fullName>
        <description>Created by LM on 9/10/2013 for Phase 2 rollout</description>
        <label>Brand/Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Account_ID__c</fullName>
        <description>Created by LM on 3/7/2014 for Phase2</description>
        <label>CRM Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Spend__c</fullName>
        <description>Added by LM on 3/15/2013; New for SFDC rollout</description>
        <label>Competitive Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BurrellesLuce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Won&apos;t Say/Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Mention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dow Jones Factiva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobeNewswire/NASDAQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoogleNews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gorkana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketwired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meltwater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moreover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyMediaInfo (MMI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR Newswire (Agility)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radian6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sysomos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TVEyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocus/PRWeb</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Notes__c</fullName>
        <description>Created by LM on 9/9/2013 for Phase 2 rollout</description>
        <label>Competitor Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_Snippet__c</fullName>
        <description>Created by LM on 3/5/2014 for Phase2</description>
        <label>Note Snippet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close__c</fullName>
        <description>Created by LM on 9/9/2013 for Phase 2 rollout</description>
        <label>Opportunity Close</label>
        <picklist>
            <picklistValues>
                <fullName>Lost To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stolen From</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 9/4/2013 for Phase 2 rollout</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Expiration_Alert_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Expiration Alert Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Expiration_Date__c</fullName>
        <label>Service Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Provided__c</fullName>
        <label>Service Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Competitor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COMP-{0000}</displayFormat>
        <label>Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>